# lysisdir

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: dir.h  file.h  path.h
src/: path_analyze.c  path_create.c
tests/: path_analyze.c  path_create.c
